--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://kit.fontawesome.com/652bb4744a.js" crossorigin="anonymous"></script>
+    <script src="//embed.typeform.com/next/embed.js"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
